2006-08-16  Nurdin Premji  <npremji@redhat.com>

	* StatusWidget.java: Changed to display menu after a button release.

2006-08-16  Andrew Cagney  <cagney@redhat.com>

	* WindowManager.java: Specify "frysk.gui...." as the logger,
	delete unused import of frysk.Config.

2006-08-16  Mike Cvet  <mcvet@redhat.com>

	* EditObserverDialog.java (.buttonEvent): Removed printing to
	console and now prints to a WarnDialog instead.
	* actions/RunExternal.java (setArgument): Fixed a String display.

2006-08-16  Nurdin Premji  <npremji@redhat.com>

	* StatusWidget.java: Fixed right-click menu.
	Got rid of kludge of storing integer inside a pointer.

2006-08-16    <swagiaal@redhat.com>

	* SessionProcDataModel.java: handling was being added to itemAdded
	instead of itemRemoved as it is now part of fix for 3062.

2006-08-16  Nurdin Premji  <npremji@redhat.com>

	* StatusWidget.java: Applied GNU Formatting.
	Changed code to only pop up menu when one trace is selected.
	Multiple traces should have different functionality.

2006-08-15  Nurdin Premji  <npremji@redhat.com>

	* StatusWidget.java: Asthetic changes to eventviewer.

2006-08-14  Mike Cvet  <mcvet@redhat.com>

	* PIDColumnDialog.java (load): Fixed a checkbox bug during loading.
	* SessionProcTreeView.java (load): Set column visibility on startup.

2006-08-14  Mark Wielaard  <mark@klomp.org>

	* StatusWidget.java (StatusWidget): MouseListener.mouseEvent()
	traces[] consists of longs.

2006-08-11  Nurdin Premji  <npremji@redhat.com>

	* StatusWidget.java: Added right click menu to traces. Need to do same for processes.
	Applied GNU Formatting.

2006-08-09  Mike Cvet  <mcvet@redhat.com>

	* ProcMenu.java (ProcMenu): Edited to list options for editing columns
	and refreshing. No longer statically referenced.
	* PIDMenu.java: Added.
	* PIDColumnDialog.java: Added - edit columsn for RSS, VSZ, and TIME.
	* SessionProcTreeView.java (SessionProcTreeView): Now initializes a 